fix: Blog heading text clipping

--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -16,6 +16,8 @@
     font-size: 62px;
     line-height: 75px;
     letter-spacing: -0.04em;
+
+    padding-bottom: 3px;
 }
 
 .gpt3__blog-container {
